--- a/package.json
+++ b/package.json
@@ -10,18 +10,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "npm run lint && npm run test"
     }
-  },
-  "lint-staged": {
-    "*.{js,json,css,md}": [
-      "prettier --write",
-      "git add"
-    ],
-    "*.ts": [
-      "tslint --project tsconfig.json --fix",
-      "git add"
-    ]
   },
   "repository": {
     "type": "git",
@@ -43,7 +33,6 @@
   "devDependencies": {
     "dtslint": "^0.3.0",
     "husky": "^1.2.0",
-    "lint-staged": "^8.1.0",
     "prettier": "^1.15.2",
     "tslint": "^5.11.0",
     "tslint-config-airbnb": "^5.11.1",
