--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "noEmitOnError": false,
+    "noEmitOnError": true,
     "allowJs": false,
     "target": "es5",
     "moduleResolution": "node",
