--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "type-ts",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Typescript Type-level Playground",
   "main": "index.ts",
   "scripts": {
-    "test": "dtslint tests",
-    "lint": "tslint --project tsconfig.json --fix 'src/*.ts' 'index.d.ts'"
+    "test": "npm run lint",
+    "lint": "eslint --fix 'src/*.ts' 'test/*.ts' 'index.d.ts'"
   },
   "husky": {
     "hooks": {
@@ -30,12 +30,15 @@
   },
   "homepage": "https://github.com/ivivona/type-ts#readme",
   "devDependencies": {
-    "dtslint": "^0.3.0",
-    "husky": "^1.3.1",
-    "prettier": "^1.19.1",
-    "tslint": "^5.20.1",
-    "tslint-config-airbnb": "^5.11.2",
-    "tslint-config-prettier": "^1.18.0",
-    "typescript": "^3.7.2"
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/parser": "^2.25.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-expect-type": "0.0.4",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "husky": "^4.2.3",
+    "prettier": "^2.0.2",
+    "typescript": "^3.8.3"
   }
 }
