--- a/package.json
+++ b/package.json
@@ -1,15 +1,22 @@
 {
   "name": "type-ts",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "Typescript Type-level Playground",
-  "main": "index.ts",
+  "files": [
+    "lib"
+  ],
+  "main": "lib/index.js",
   "scripts": {
     "test": "npm run lint",
-    "lint": "eslint --fix 'src/*.ts' 'test/*.ts' 'index.d.ts'"
+    "lint": "eslint --fix 'src/*.ts' 'test/*.ts' 'index.ts'",
+    "emit": "tsc src/*.ts --project tsconfig.json -d --emitDeclarationOnly --module amd --outFile lib/index.d.ts",
+    "touch": "nodetouch ./lib/index.js",
+    "clean": "rimraf ./lib",
+    "build": "run-s clean emit touch"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm run test"
+      "pre-commit": "npm run test"
     }
   },
   "repository": {
@@ -30,15 +37,19 @@
   },
   "homepage": "https://github.com/ivivona/type-ts#readme",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "@typescript-eslint/parser": "^2.34.0",
-    "eslint": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.7.0",
+    "@typescript-eslint/parser": "^3.7.0",
+    "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-expect-type": "0.0.4",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-expect-type": "0.0.5",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.0.5",
-    "typescript": "^3.9.3"
-  }
+    "rimraf": "^3.0.2",
+    "touch": "^3.1.0",
+    "typescript": "^3.9.7"
+  },
+  "dependencies": {}
 }
